content/_generated-doc/3.6/config/quarkus-liquibase-mongodb.adoc

:summaryTableId: quarkus-liquibase-mongodb
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-liquibase-mongodb_configuration]]link:#quarkus-liquibase-mongodb_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.change-log]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.change-log[quarkus.liquibase-mongodb.change-log]`


[.description]
--
The change log file

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_CHANGE_LOG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_CHANGE_LOG+++`
endif::add-copy-button-to-env-var[]
--|string 
|`db/changeLog.xml`


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.enabled]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.enabled[quarkus.liquibase-mongodb.enabled]`


[.description]
--
Flag to enable / disable Liquibase.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.migrate-at-start]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.migrate-at-start[quarkus.liquibase-mongodb.migrate-at-start]`


[.description]
--
The migrate at start flag

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_MIGRATE_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_MIGRATE_AT_START+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.validate-on-migrate]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.validate-on-migrate[quarkus.liquibase-mongodb.validate-on-migrate]`


[.description]
--
The validate on update flag

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_VALIDATE_ON_MIGRATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_VALIDATE_ON_MIGRATE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.clean-at-start]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.clean-at-start[quarkus.liquibase-mongodb.clean-at-start]`


[.description]
--
The clean at start flag

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_CLEAN_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_CLEAN_AT_START+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.contexts]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.contexts[quarkus.liquibase-mongodb.contexts]`


[.description]
--
The list of contexts

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_CONTEXTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_CONTEXTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.labels]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.labels[quarkus.liquibase-mongodb.labels]`


[.description]
--
The list of labels

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_LABELS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_LABELS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.default-catalog-name]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.default-catalog-name[quarkus.liquibase-mongodb.default-catalog-name]`


[.description]
--
The default catalog name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_DEFAULT_CATALOG_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_DEFAULT_CATALOG_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.default-schema-name]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.default-schema-name[quarkus.liquibase-mongodb.default-schema-name]`


[.description]
--
The default schema name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_DEFAULT_SCHEMA_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_DEFAULT_SCHEMA_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.liquibase-catalog-name]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.liquibase-catalog-name[quarkus.liquibase-mongodb.liquibase-catalog-name]`


[.description]
--
The liquibase tables catalog name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_LIQUIBASE_CATALOG_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_LIQUIBASE_CATALOG_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.liquibase-schema-name]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.liquibase-schema-name[quarkus.liquibase-mongodb.liquibase-schema-name]`


[.description]
--
The liquibase tables schema name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_LIQUIBASE_SCHEMA_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_LIQUIBASE_SCHEMA_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.liquibase-tablespace-name]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.liquibase-tablespace-name[quarkus.liquibase-mongodb.liquibase-tablespace-name]`


[.description]
--
The liquibase tables tablespace name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_LIQUIBASE_TABLESPACE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_LIQUIBASE_TABLESPACE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.change-log-parameters-change-log-parameters]]`link:#quarkus-liquibase-mongodb_quarkus.liquibase-mongodb.change-log-parameters-change-log-parameters[quarkus.liquibase-mongodb.change-log-parameters]`


[.description]
--
The parameters to be passed to the changelog. Defined as key value pairs.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_CHANGE_LOG_PARAMETERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_CHANGE_LOG_PARAMETERS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===