content/_generated-doc/3.33/config/quarkus-liquibase-mongodb.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-enabled]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-enabled[`+++quarkus.liquibase-mongodb.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Flag to enable / disable Liquibase.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

h|[[quarkus-liquibase-mongodb_section_quarkus-liquibase-mongodb]] [.section-name.section-level0]##link:#quarkus-liquibase-mongodb_section_quarkus-liquibase-mongodb[The liquibase configuration config by client name]##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-change-log]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-change-log[`+++quarkus.liquibase-mongodb.change-log+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.change-log+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".change-log+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".change-log+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The change log file


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_CHANGE_LOG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_CHANGE_LOG+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++db/changeLog.xml+++`

a|icon:lock[title=Fixed at build time] [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-search-path]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-search-path[`+++quarkus.liquibase-mongodb.search-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.search-path+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".search-path+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".search-path+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The search path for DirectoryResourceAccessor


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_SEARCH_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_SEARCH_PATH+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-mongo-client-name]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-mongo-client-name[`+++quarkus.liquibase-mongodb.mongo-client-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.mongo-client-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".mongo-client-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".mongo-client-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
Mongodb client name to use to connect to database, defaults to the default mongodb client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_MONGO_CLIENT_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_MONGO_CLIENT_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-migrate-at-start]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-migrate-at-start[`+++quarkus.liquibase-mongodb.migrate-at-start+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.migrate-at-start+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".migrate-at-start+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".migrate-at-start+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The migrate at start flag


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_MIGRATE_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_MIGRATE_AT_START+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-validate-on-migrate]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-validate-on-migrate[`+++quarkus.liquibase-mongodb.validate-on-migrate+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.validate-on-migrate+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".validate-on-migrate+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".validate-on-migrate+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The validate on update flag


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_VALIDATE_ON_MIGRATE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_VALIDATE_ON_MIGRATE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-clean-at-start]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-clean-at-start[`+++quarkus.liquibase-mongodb.clean-at-start+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.clean-at-start+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".clean-at-start+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".clean-at-start+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The clean at start flag


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_CLEAN_AT_START+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_CLEAN_AT_START+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-change-log-parameters-change-log-parameters]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-change-log-parameters-change-log-parameters[`+++quarkus.liquibase-mongodb.change-log-parameters."change-log-parameters"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.change-log-parameters."change-log-parameters"+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".change-log-parameters."change-log-parameters"+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".change-log-parameters."change-log-parameters"+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The parameters to be passed to the changelog. Defined as key value pairs.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_CHANGE_LOG_PARAMETERS__CHANGE_LOG_PARAMETERS_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_CHANGE_LOG_PARAMETERS__CHANGE_LOG_PARAMETERS_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-contexts]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-contexts[`+++quarkus.liquibase-mongodb.contexts+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.contexts+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".contexts+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".contexts+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The list of contexts


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_CONTEXTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_CONTEXTS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-labels]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-labels[`+++quarkus.liquibase-mongodb.labels+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.labels+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".labels+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".labels+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The list of labels


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_LABELS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_LABELS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-default-catalog-name]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-default-catalog-name[`+++quarkus.liquibase-mongodb.default-catalog-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.default-catalog-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".default-catalog-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".default-catalog-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The default catalog name


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_DEFAULT_CATALOG_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_DEFAULT_CATALOG_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-default-schema-name]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-default-schema-name[`+++quarkus.liquibase-mongodb.default-schema-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.default-schema-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".default-schema-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".default-schema-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The default schema name


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_DEFAULT_SCHEMA_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_DEFAULT_SCHEMA_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-liquibase-catalog-name]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-liquibase-catalog-name[`+++quarkus.liquibase-mongodb.liquibase-catalog-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.liquibase-catalog-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".liquibase-catalog-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".liquibase-catalog-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The liquibase tables catalog name


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_LIQUIBASE_CATALOG_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_LIQUIBASE_CATALOG_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-liquibase-schema-name]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-liquibase-schema-name[`+++quarkus.liquibase-mongodb.liquibase-schema-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.liquibase-schema-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".liquibase-schema-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".liquibase-schema-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The liquibase tables schema name


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_LIQUIBASE_SCHEMA_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_LIQUIBASE_SCHEMA_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-liquibase-tablespace-name]] [.property-path]##link:#quarkus-liquibase-mongodb_quarkus-liquibase-mongodb-liquibase-tablespace-name[`+++quarkus.liquibase-mongodb.liquibase-tablespace-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb.liquibase-tablespace-name+++[]
endif::add-copy-button-to-config-props[]


`+++quarkus.liquibase-mongodb."client-name".liquibase-tablespace-name+++`
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.liquibase-mongodb."client-name".liquibase-tablespace-name+++[]
endif::add-copy-button-to-config-props[]

[.description]
--
The liquibase tables tablespace name


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_MONGODB_LIQUIBASE_TABLESPACE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_MONGODB_LIQUIBASE_TABLESPACE_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|


|===

